welcome.lessons.welcome.array.array123.Array123.scala.error
array123:7: error: ';' expected but 'else' found.
	return else
               ^